# website

./: .gitignore  .gitmodules  Makefile  README.org  TODO.org  damien-courousse-fr.cabal  monsite.cabal  stack.yaml
assets/bib/: main.bib
assets/csl/: ieee.csl
assets/css/: img-overlay.css  main.css  pure-min.css  side-menu.css
assets/txt/: CNAME  humans.txt  robots.txt
monsite/: monsite.cabal
monsite/assets/csl/: chicago.csl
monsite/assets/css/: main.css
monsite/assets/txt/: humans.txt  robots.txt
monsite/pages/: index.md  sw.org.metadata
monsite/posts/: 2014-11-19-publications-with-hakyll.org
monsite/src/: site.hs
pages/: index.md  index.org  latex-writing.org  publi.markdown  publications.markdown  sw.org  sw.org.metadata
posts/: 2014-10-06--tests.markdown  2014-11-19-publications-with-hakyll.org  2014-11-27-deploy-hakyll-to-github.org
src/: BibParse.hs  site.hs
templates/: default.html  default.html.orig  photo.html  photos.html  post.html  posts.html  sitemap.html  sitemap.xml
