name:               damien-courousse-fr
version:            0.1
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , blaze-html
                  , filepath
                  , hakyll == 4.5.*
                  , pandoc
                  , pandoc-citeproc
                  , parsec
                  , process
                  , MissingH
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
